syntax = "proto3";

option go_package = "enginepb/";

service ChessEngine {
  rpc CalculateBestMove (MoveRequest) returns (MoveResponse);
}

message MoveRequest {
  string id = 1;
  string fen = 2;
  string type = 3;
}

message MoveResponse {
  string best_move = 1;
}
